# miniloader

./: CMakeLists.txt  README.md  build.ps1  build.sh  gendef.sh  main.c
.github/workflows/: build.yml
